@@ -146,7 +146,7 @@ header {
             @include column(3);
         }
 
-        .col3.addbutton {
+        .col3.actionbutton {
             width: auto;
         }
 
